src/objects/Product__mdt/Product__mdt.object-meta.xml
<CustomObject>
    <label>Product VS Engineer Assignment</label>
    <pluralLabel>Product VS Engineer Assignments</pluralLabel>
</CustomObject>