src/objects/Product__mdt/fields/Marketing_Family__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Family__c</fullName>
    <label>Marketing Family</label>
    <length>120</length>
    <type>Text</type>
</CustomField>