src/objects/Product__mdt/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>