src/objects/Product__mdt/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <label>Owner Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>