src/objects/Product__mdt/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <length>120</length>
    <type>Text</type>
</CustomField>