src/objects/Product__mdt/listViews/All_VIEW_LIST.listView-meta.xml
<ListView>
    <fullName>All_VIEW_LIST</fullName>
    <columns>Owner__c</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>End_Customer__c</columns>
    <columns>Location__c</columns>
    <columns>Marketing_Family__c</columns>
    <columns>Owner_Email__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All VIEW LIST</label>
</ListView>